feat: 增加更新日志

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>主页</title>
+  <title>我的主页</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+  <link rel='stylesheet' type='text/css' media='screen' href='index.css'>
 </head>
 <body>
   <div class="card">
@@ -13,12 +14,12 @@
       <h1 class="hello">欢迎！</h1>
       <h1 class="myname"><span>这里是 </span>Saltro</h1>
       <div class="tags">
-        <h2>✏️ 大二 武汉大学电子商务专业在读</h2>
+        <h2>✏️ 大三 武汉大学电子商务专业在读</h2>
         <h2>不擅长社交</h2>
-        <h2>偶尔看电影或者摄影 但没什么热爱</h2>
-        <h2>日常是敲键盘<del>还很菜</del></h2>
+        <h2>日常是敲键盘 还很菜</h2>
         <h2>没有做学术的天赋</h2>
         <h2>曾经励志打 acm 的蒟蒻 不会 dp</h2>
+        <h2>💻 目前在学前端</h2>
       </div>
     </div>
     <div class="profile">
@@ -33,7 +34,8 @@
   </div>
   <div class="footer">
     <a href="https://beian.miit.gov.cn/">晋ICP备2021004725号</a>
+    <div class="separator"></div>
+    <a href="logs.html">v1.1 更新日志</a>
   </div>
-  <script src='main.js'></script>
 </body>
 </html>
