--- a/logs.html
+++ b/logs.html
@@ -14,13 +14,24 @@
     <div class="vertical-line" id="vertical-line"></div>
     <div class="log-card">
       <div class="head">
+        <span class="version">1.2</span>
+      </div>
+      <div class="content">
+        <span>
+          1、首页介绍更新：“大三”->“大四”；
+          2、首页网站名更新：“我的主页”->“SaltroPing 个人学习经验分享 - 我的主页”。
+        </span>
+      </div>
+    </div>
+    <div class="log-card">
+      <div class="head">
         <span class="version">1.1</span>
       </div>
       <div class="content">
         <span>
           1、增加更新日志页面；
           2、更换字体为苹方字体；
-          3、首页介绍更新："大二"->"大三"，删除"偶尔看电影或者摄影 但没什么热爱"，"<del>还很菜</del>"->"还很菜"，增加"💻 目前在学前端"；
+          3、首页介绍更新：“大二”->“大三”，删除“偶尔看电影或者摄影 但没什么热爱”，“<del>还很菜</del>”->“还很菜”，增加“💻 目前在学前端”；
           4、微调首页链接 CSS 样式。
         </span>
       </div>
